# cpp-snippets

./: .gitignore  .gitmodules  ErrPolicy.h  In-place_Hybrid_Binary-Radix_Sort.html  SafeUpdate.cpp  improving-sorting.ppt  lc_string.cpp  section.c  test.cpp
DDJ-getstring/: README.md  getstring.c  getstring.h  sniptype.h
GIL/: simple_fill.cpp
PointerExt/: CMakeLists.txt  PointerExt.cpp
ScopedGuard/: CMakeLists.txt  main.cpp
TwistList/: CMakeLists.txt  fourSum.cpp  main.cpp  scope.hpp
ari/: CMakeLists.txt  features.h  main.cpp  scoped.cpp  spanning.cpp
boost/program_options/: .cproject  .project  makefile  multiple_sources.cpp  wmconsole.cfg
cimg/: CMakeLists.txt  magick_test.cpp  main.cpp
cover_image/: e.py  ex.pl  ex.py  алгоритмическая_задача.txt
cpp-algo/: CMakeLists.txt  Domino.cpp  LargestTripleProduct.cpp  ListRevert.c  MoveZeroes.cpp  PairSums.cpp  PrefixNotation.cpp  PriorityQueue.hpp  Robot.cpp  dfs.cpp  main.cpp  test_std.cpp
cpp-async/: CMakeLists.txt  main.cpp
cpp-features/: .clang-format  CMakeLists.txt  _clang-format  async.cpp  features.h  lookup.cpp  main.cpp  scoped.cpp  shared_ptr.cpp  spanning.cpp  structural.cpp  structured.cpp
cpp-features/include/: cpp14_stubs.hpp  require.hpp  trace.hpp
cpp-features/src/: CMakeLists.txt  ExceptionSafety.cpp  WrapOut.cpp  arith_conversion.cpp  async.cpp  async1.cpp  async2.cpp  bitmap.cpp  bitset.cpp  bitset_subscript.cpp  booStringlWrapper.cpp  concept.cpp  container_allocator.cpp  containers.cpp  copy_elision.cpp  cpp14_stubs.hpp  deleter.cpp  deque_dtor.cpp  deque_dtor2.cpp  enum_array.cpp  extern_tmpl.cpp  extern_tmpl.h  extern_tmpl_2.cpp  factory.cpp  factory.hpp  factory_impl.cpp  features.h  filesystem.cpp  float_inf.cpp  float_precision.cpp  float_random.cpp  fold_expr.cpp  fstream_open.cpp  functional.cpp  initialization.cpp  inline.cpp  inline.h  inline2.cpp  layout.cpp  literals.cpp  (+41 more)
cpp-filesystem/: CMakeLists.txt
cpp-filesystem/src/: atoi128.c  files.cpp  maxOf.cpp  md5_log.cpp  md5_test.cpp  timing.cpp  timing.hpp
cpp-new/: CMakeLists.txt  main.cpp
datetime/: a.cpp  datetime.cpp  elapsed.c  makefile
files/: file_sync.cpp  named_mutex.cpp
filesystem/: CMakeLists.txt  main.cpp
fileutils/: fileutils.cpp
fork/: fork.cpp  makefile
format/: format.cpp  printf.cpp
graph/: CMakeLists.txt  cgraph_api.cpp  cgraph_api.hpp  graph.cpp  graph.hpp  magick.cpp  magick.hpp  main.cpp  maze.cpp  maze.hpp
hash_generic/: gcc.mk  test_md5.cpp
hash_generic/hash/GeneralHashFunctions_-_C/: GeneralHashFunctions.h  HashTest.c  Makefile
hash_generic/hash/GeneralHashFunctions_-_CPP/: HashTest.cpp
include/: trace.h
md5/: test_md5
md5/hash/GeneralHashFunctions_-_C/: GeneralHashFunctions.c
md5/hash/GeneralHashFunctions_-_CPP/: Makefile
md5_variants/: index.txt
md5_variants/PeterDeutsch/: md5.c  md5.h  md5main.c  md5main.cpp
mergesort/: mergesort.cpp
misc/src/: CMakeLists.txt  demo_code.cpp  fancy_ptr.cpp  fancy_ptr.h  fancy_ptr_with_errors.cpp  fault_injection_ptr.cpp  vector_negative.cpp
mmap/: bin_test  dump_view.py  makefile  mmap.cpp  mmap.exe.stackdump
par_sort/: Andrew Tridgell.URL  Makefile.AP1000  Makefile.CM5  README  ijhsc_paper.ps.Z  index.html  main.c  mimd.h  par_sort.c
pthread/: CMakeLists.txt  main.cpp  printlog.py  printlog.sh
py/: Browser.py  Zeroconf.py  pinhole.py  thread_ex.py
rdist/: loc.sh  rem.sh  t.sh
scanf/: makefile  unmarshall.cpp
share/: QueryInfo.h  test.cpp  wmc_clock.cpp  wmc_clock.h  wmc_pocologger.h  wmc_trace.h
shell/: a.sh  args.sh  array.sh  array_read.sh  b.sh  bash_for_C_programmers.sh  bashism.sh  clean.sh  dist.sh  file_read.sh  getopts_long  lopts.sh  mysql_config  options.sh  retry.sh  rotate.sh  split.sh  tbl_size.sh  trap.sh  worm.sh
shell/jobscontrol/: child.sh  main.sh
shell/shflags-1.0.3/: Documentation10x.html
sort/: shell_sort_str.c
time/: elapsed.cpp  timegetc.c
tree/: tree.cpp
udp/: Python_Sockets.html  UdpCommunication - PythonInfo Wiki.URL  bind vs connect on a UDP broadcast.html  bind() vs connect() on a UDP broadcast socket (Linux) - UNIX Socket FAQ.URL  listener.c  udp_listener.py
utf8/: core.h  d.txt  d_dat.4  test.cpp
variant/: CMakeLists.txt  main.cpp
